--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-# ─── Supabase Configuration ───
-# Get these from: https://supabase.com → Project Settings → API
-VITE_SUPABASE_URL=https://YOUR_PROJECT_ID.supabase.co
-VITE_SUPABASE_ANON_KEY=YOUR_ANON_KEY_HERE
+# DigiDoc environment variables
+# Copy this file to .env and fill in values as needed.
+
+# Port for the Express API server (default: 3001)
+# PORT=3001
