--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "digidoc advance health",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"vite\" \"node server/index.js\"",
+    "server": "node server/index.js",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -20,15 +21,19 @@
   },
   "homepage": "https://github.com/Joseph-MCS/digidoc-project-frontend-#readme",
   "dependencies": {
-    "@supabase/supabase-js": "^2.98.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "lucide-react": "^0.575.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "react-router-dom": "^7.13.1"
+    "react-router-dom": "^7.13.1",
+    "sql.js": "^1.12.0"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.2.1",
     "@vitejs/plugin-react": "^5.1.4",
+    "concurrently": "^8.2.2",
     "tailwindcss": "^4.2.1",
     "vite": "^7.3.1"
   }
