--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,12 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "functions": {
-    "server/index.js": {
-      "includeFiles": "node_modules/sql.js/dist/**"
+    "api/index.js": {
+      "includeFiles": "server/**,node_modules/sql.js/dist/**"
     }
   },
   "rewrites": [
-    { "source": "/api/:path*", "destination": "/server/index.js" },
+    { "source": "/api/:path*", "destination": "/api/index" },
     { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
